修改startup.sh